--- a/e000/hs000/config/context_values.cfg
+++ b/e000/hs000/config/context_values.cfg
@@ -18,6 +18,7 @@
  <contextValue id="appRunsCount" unsignedInt:value="1"/>
  <contextValue id="areGpuHardwareMetricsAvailable" boolean:value="false"/>
  <contextValue id="auto_finalize" boolean:value="true"/>
+ <contextValue id="calleeAttributionMode" value="topSystem"/>
  <contextValue id="cknob_appdebug" value="runtc.cknob_appdebug.off"/>
  <contextValue id="cknob_check_cross_thread_stack_access" value="opt1"/>
  <contextValue id="cknob_check_datarace" boolean:value="false"/>
@@ -61,6 +62,7 @@
  <contextValue id="gpuPlatformIndex@version" int:value="1"/>
  <contextValue id="hostName" value="c012-n013"/>
  <contextValue id="hostOS" value="Linux"/>
+ <contextValue id="inlineAttributionMode" value="on"/>
  <contextValue id="interval" int:value="10"/>
  <contextValue id="isEtwCLRSupported" value="no"/>
  <contextValue id="isEtwDxSupported" value="no"/>
@@ -80,6 +82,7 @@
  <contextValue id="issues_cache_actual" boolean:value="false"/>
  <contextValue id="logicalCPUCount" int:value="256"/>
  <contextValue id="logicalCPUCount@version" int:value="1"/>
+ <contextValue id="loopAttributionMode" value="loop-and-function"/>
  <contextValue id="maxLocalBandwidth" unsignedLong:value="0"/>
  <contextValue id="measureRoofs" value="dram,mcdram,cpu_cache,flop_peak"/>
  <contextValue id="mklUserMode" boolean:value="true"/>
@@ -108,7 +111,7 @@
  <contextValue id="process_for_analysis" value=""/>
  <contextValue id="referenceFrequency" unsignedLong:value="1299998844"/>
  <contextValue id="referenceFrequency@version" int:value="2"/>
- <contextValue id="resultSize" long:value="3668708"/>
+ <contextValue id="resultSize" long:value="4742646"/>
  <contextValue id="resultSize@version" int:value="1"/>
  <contextValue id="resumeAfter" int:value="1000"/>
  <contextValue id="ringBufferSizeInSeconds" unsignedLong:value="0"/>
